--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,12 @@
+main {
+  margin: auto;
+}
+
 .notfound {
   text-align: center;
 }
 
 .card_weather {
-  margin-bottom: 3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -37,16 +40,15 @@
   display: flex;
   gap: 1rem;
   flex-direction: column;
-  width: 40rem;
+  width: 35rem;
 }
 
 .hourlyforecast {
   width: 15rem;
-  height: 27rem;
+  height: 23.2rem;
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
-  padding: 1.2rem;
-  border: 1px var(--color-border-subtle) solid;
+  padding: 1rem;
   background-color: var(--color-background-secondary);
 }
