--- a/src/components/CurrentWeatherCard/style.module.css
+++ b/src/components/CurrentWeatherCard/style.module.css
@@ -7,13 +7,13 @@
 
 .contentmain {
     display: flex;
-    width: 100%;
-    height: 12rem;
+    width: auto;
+    height: 10rem;
     border-radius: 0.5rem;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-image: url("/src/assets/images/bg-today-large.svg");
+    background-image: url("/src/assets/images/bg-today-small.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -42,8 +42,8 @@
 }
 
 .boxweather {
-    width: 8rem;
-    height: 5.6rem;
+    width: 7rem;
+    height: 5rem;
     padding-left: 1rem;
     border-radius: 0.5rem;
     border: 1px var(--color-border-subtle) solid;
@@ -56,4 +56,5 @@
 
 .infotime {
     font-size: 1.4rem;
+    margin: 0;
 }
