--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --color-background-secondary: #1c2342; /* Fundo de cartões/inputs */
   --color-text-white: #FFFFFF; /* Cor do texto principal */
   --color-border-subtle: #30364C;
-  --color-hourly-forecast-list: #181f3e;
+  --color-hourly-forecast-list: #30394b;
   --color-border-hourly-forecast-list: #3d4050;
   --color-search: #cbcfdd;
   --color-background-input: #323644; /* Fundo de cartões/inputs */
