--- a/src/components/ForecastSearch/style.module.css
+++ b/src/components/ForecastSearch/style.module.css
@@ -19,6 +19,7 @@
     }
   
     h1 {
+      margin-top: 0;
       margin-bottom: 1rem;
     }
   
@@ -50,6 +51,7 @@
       width: 60%;
       height: 2rem;
       padding-left: 0.6rem;
+      font-size: 0.75rem;
       outline: none;
     }
   
