--- a/src/components/HourlyForecast/style.module.css
+++ b/src/components/HourlyForecast/style.module.css
@@ -1,10 +1,9 @@
 .contenthour {
     display: flex;
-    height: 1.70rem;
-    margin-top: 0.3rem;
+    height: 2.2rem;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 0.20rem;
+    margin-top: 0.61rem;
     border: 1px var(--color-border-hourly-forecast-list) solid;
     border-radius: 0.3em;
     background-color: var(--color-hourly-forecast-list);
@@ -13,6 +12,7 @@
 
 .img {
     width: 2rem;
+    margin-right: 0.5rem;
 }
 
 .hour_text {
@@ -21,8 +21,7 @@
 
 .img_and_hour {
     display: flex;
-    width: 30%;
+    width: 40%;
     justify-content: center;
     align-items: center;
-    padding-left: 1rem;
 }
