--- a/src/components/CurrentWeatherCard/style.module.css
+++ b/src/components/CurrentWeatherCard/style.module.css
@@ -9,9 +9,9 @@
     display: flex;
     width: auto;
     height: 10rem;
-    border-radius: 0.5rem;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    border-radius: 0.5rem;
     align-items: center;
     background-image: url("/src/assets/images/bg-today-small.svg");
     background-size: 100%;
@@ -22,7 +22,6 @@
 .city {
     font-size: 1.4rem;
     margin: 0.4rem;
-
 }
 
 .date {
@@ -36,8 +35,13 @@
     justify-content: space-between;
 }
 
+.box_city_date {
+    margin-left: 1.1rem;
+}
+
 .maintemp {
     margin: 0;
+    margin-right: 1.5rem;
     font-size: 3.50rem;
     font-family: "DMSans-Italic";
 }
@@ -63,12 +67,14 @@
 @media (max-width: 450px) {
     .WeatherCard {
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .contentmain {
         width: 90vw;
-        height: 40vh;
-        margin: auto;
+        height: 25vh;
+        margin: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -79,7 +85,22 @@
         width: 90vw;
         margin: auto;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .boxweather {
+        margin: 0.4rem;
+        width: 10rem;
+    }
+
+    .box_city_date {
+        margin: 0;
+    }
+
+    .maintemp {
+        margin: 0;
     }
 }
