--- a/src/components/DailyForecast/style.module.css
+++ b/src/components/DailyForecast/style.module.css
@@ -30,3 +30,20 @@
     width: 2.5rem;
     height: auto;
 }
+
+@media (max-width: 450px) {
+    .cardDailyForecast {
+        margin: 0.2rem;
+    }
+
+    .daily {
+        width: 5rem;
+        padding: 0.78rem;
+    }
+
+    .img {
+        width: 3rem;
+    }
+
+    
+}
