--- a/src/components/ForecastSearch/style.module.css
+++ b/src/components/ForecastSearch/style.module.css
@@ -1,109 +1,162 @@
 .logo {
-  height: 1.6rem;
+  height: 1.8rem;
   margin-top: 1.2rem;
-  margin-left: 8rem;
+  margin-left: 12rem;
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
 }
 
 .header {
-    margin: auto;
-    max-width: 34rem;
-    font-family: "BricolageGrotesque";
-    margin-bottom: 2rem;
-    text-align: center;
-  
-    form {
-      display: flex;
-    }
-  
-    h1 {
-      margin-top: 0;
-      margin-bottom: 1rem;
-    }
-  
-    .search_container {
-      display: flex;
-      justify-content: center;
-    }
-  
-    .search_input {
-      width: 20rem;
-      display: flex;
-      justify-content: start;
-      align-items: center;
-      padding-left: 0.5rem;
-      background-color: var(--color-background-input);
-      border-radius: 0.4rem;
-    }
-  
-    .search_icon {
-      color: var(--color-search);
-      width: 1.05rem;
-      padding: 0;
-    }
-  
-    input {
-      background-color: var(--color-background-input);
-      border: none;
-      color: var(--color-text-white);
-      width: 60%;
-      height: 2rem;
-      padding-left: 0.6rem;
-      font-size: 0.75rem;
-      outline: none;
-    }
-  
-    input::placeholder {
-      color: var(--color-search);
-    }
-  
-    button {
-      border: none;
-      color: var(--color-text-white);
-      width: 4.5rem;
-      background-color: var(--color-button);
-      height: 2rem;
-      border-radius: 0.4rem;
-      margin-left: 0.8rem;
-      font-size: 0.7rem;
-    }
-  
-    button:hover {
-      transition: 0.2s;
-      background-color: var(--color-button-hover);
-    }
-  
-    .history_dropdown {
-      width: 83%;
-      margin: auto;
-      margin-top: 0.6rem;
-      text-align: start;
-      padding-left: 0.4rem;
-      padding-right: 0.4rem;
-      background-color: var(--color-background-input);
-      border: 1px solid var(--color-border-subtle);
-      border-radius: 0.4rem;
-      color: var(--color-search);
-    }
-  
-    .history_item {
-      box-sizing: border-box;
-      width: 100%;
-      height: 2rem;
-      margin-top: 0.3em;
-      margin-bottom: 0.3rem;
-      padding-left: 0.4rem;
-      display: flex;
-      align-items: center;
-      border-radius: 0.4rem;
-    }
-  
-    .history_item:hover {
-      transition: 0.2s;
-      border: 1px solid var(--color-history-item);
-      background-color: var(--color-background-history);
-  
-    }
+  margin: auto;
+  max-width: 34rem;
+  font-family: "BricolageGrotesque";
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+form {
+  display: flex;
+}
+
+h1 {
+  font-size: 1.9rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.search_container {
+  display: flex;
+  justify-content: center;
+}
+
+.search_input {
+  width: 19rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 0.9rem;
+  background-color: var(--color-background-input);
+  border-radius: 0.4rem;
+}
+
+.search_icon {
+  color: var(--color-search);
+  width: 1.05rem;
+  padding: 0;
+}
+
+input {
+  background-color: var(--color-background-input);
+  border: none;
+  color: var(--color-text-white);
+  width: 60%;
+  padding-left: 0.6rem;
+  font-size: 0.75rem;
+  outline: none;
+}
+
+input::placeholder {
+  color: var(--color-search);
+}
+
+button {
+  border: none;
+  color: var(--color-text-white);
+  width: 4.3rem;
+  background-color: var(--color-button);
+  height: 1.85rem;
+  border-radius: 0.4rem;
+  margin-left: 0.8rem;
+  font-size: 0.7rem;
+}
+
+button:hover {
+  transition: 0.2s;
+  background-color: var(--color-button-hover);
+}
+
+.history_dropdown {
+  width: 83%;
+  margin: auto;
+  margin-top: 0.6rem;
+  text-align: start;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+  background-color: var(--color-background-input);
+  border: 1px solid var(--color-border-subtle);
+  border-radius: 0.4rem;
+  color: var(--color-search);
+}
+
+.history_item {
+  box-sizing: border-box;
+  width: 100%;
+  height: 2rem;
+  margin-top: 0.3em;
+  margin-bottom: 0.3rem;
+  padding-left: 0.4rem;
+  display: flex;
+  align-items: center;
+  border-radius: 0.4rem;
+}
+
+.history_item:hover {
+  transition: 0.2s;
+  border: 1px solid var(--color-history-item);
+  background-color: var(--color-background-history);
+
+}
+
+@media (max-width: 450px) {
+  .logo {
+    height: 1.5rem;
+    margin-left: 1rem;
   }
+
+  .header {
+    margin: auto;
+    margin-bottom: 1.5rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search_input {
+    width: 22.5rem;
+    height: 3rem;
+    margin-bottom: 1em;
+  }
+
+  input {
+    width: 100%;
+    font-size: 1rem;
+  } 
+
+  input::placeholder {
+    font-size: 1rem;
+  }
+
+  .div_button {
+    display: flex;
+    width: 100%;
+    height: 3rem;
+  }
+
+  button {
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   font-size: 1rem;
+  }
+}
