--- a/src/components/HourlyForecast/style.module.css
+++ b/src/components/HourlyForecast/style.module.css
@@ -25,3 +25,13 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 450px) {
+    .contenthour {
+        height: 3rem;
+    }
+
+    .img {
+        width: 2.6rem;
+    }
+}
