--- a/src/components/CurrentWeatherCard/style.module.css
+++ b/src/components/CurrentWeatherCard/style.module.css
@@ -94,6 +94,7 @@
     .boxweather {
         margin: 0.4rem;
         width: 10rem;
+        height: 6rem;
     }
 
     .box_city_date {
@@ -102,5 +103,9 @@
 
     .maintemp {
         margin: 0;
+    }
+
+    .title {
+        font-size: 1rem;
     }
 }
