--- a/src/components/DailyForecast/style.module.css
+++ b/src/components/DailyForecast/style.module.css
@@ -38,12 +38,14 @@
 
     .daily {
         width: 5rem;
+        height: 7rem;
         padding: 0.78rem;
+        font-size: 1rem;
     }
 
     .img {
         width: 3rem;
     }
 
-    
+
 }
