--- a/src/components/ForecastSearch/style.module.css
+++ b/src/components/ForecastSearch/style.module.css
@@ -110,8 +110,8 @@ button:hover {
 
 @media (max-width: 450px) {
   .logo {
-    height: 1.5rem;
-    margin-left: 1rem;
+    height: 1.8rem;
+    margin-left: 0.2rem;
   }
 
   .header {
@@ -136,6 +136,7 @@ button:hover {
     width: 22.5rem;
     height: 3rem;
     margin-bottom: 1em;
+    font-size: 1rem;
   }
 
   input {
