--- a/src/components/HourlyForecast/style.module.css
+++ b/src/components/HourlyForecast/style.module.css
@@ -21,14 +21,16 @@
 
 .img_and_hour {
     display: flex;
-    width: 40%;
+    margin-right: 1rem;
+    margin-left: 1rem;
     justify-content: center;
     align-items: center;
 }
 
 @media (max-width: 450px) {
     .contenthour {
-        height: 3rem;
+        height: 2.88rem;
+        font-size: 1rem;
     }
 
     .img {
